# logmine-rs

./: .gitignore  Cargo.toml  README.md  make-patterns  profile  profile-dtrace
benches/: bench.rs
examples/: make-patterns.rs
src/: clusterer.rs  lib.rs  macros.rs  main.rs  parallel_clusterer.rs  pattern.rs  pattern_generator.rs  patterns.rs  pool.rs  scorer.rs  scoring.rs
