[package]
name = "logmine-rs"
version = "0.1.0"
edition = "2018"

[features]
default = []
small-vec = ["smallvec"]

[[bench]]
name = "bench"
harness = false

[dependencies]
rayon = "1.5.1"
seal = { git = "https://github.com/regexident/rust-seal" }
smallvec = { version = "1.6.1", optional = true }
structopt = "0.3.23"

[dev-dependencies]
criterion = "0.3"
