[package]
name = "logmine-rs"
version = "0.1.0"
edition = "2018"

[features]
default = []
small-vec = ["smallvec"]

[[bench]]
name = "bench"
harness = false

[dependencies]
crossbeam-channel = "0.5.1"
num_cpus = "1.13.0"
rayon = "1.5.1"
seal = { git = "https://github.com/lilymara-onesignal/rust-seal", branch = "lilymara-os-pr-1" }
smallvec = { version = "1.6.1", optional = true }
structopt = "0.3.23"
parking_lot = "0.11"
indicatif = "0.16"
regex = "1"

[dev-dependencies]
criterion = "0.3"
